// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tester/ScrollToTopButton Defaults play-test 1`] = `
<div data-test-block="true">
  <div class="height100vh">
    <main class="scrollToTopContainer"
          tabindex="-1"
    >
      <div class="_layout_179rg_1 ">
        <style>
          div.css-1gh4yjl { max-width: none}
        </style>
        <p>
          <strong>
            Responsive container
          </strong>
        </p>
        <article class="_article_179rg_12">
          <p>
            <strong>
              Responsive article
            </strong>
          </p>
          <p>
            (uses --semantic-responsive-article)
          </p>
        </article>
        <p>
          (uses --semantic-responsive-container)
        </p>
      </div>
      <div class="_container_gchs5_1  ">
        <button class="_scrollToTopButton_gchs5_6 _scrollToTopButton_visible_gchs5_27 "
                type="button"
        >
          <div class="_scrollToTopButtonIconContainer_gchs5_48 ">
            <svg class="_systemIcon_6zbcy_2 _systemIcon_large_6zbcy_13 _scrollToTopButtonIconContainerIcon_gchs5_56 "
                 viewbox="0 0 24 24"
                 focusable="false"
                 aria-hidden="true"
                 role="img"
            >
              <path d="M11.1 17.6h1.8v1.1h-1.8v-1.1zm0-3.3h1.8v2.2h-1.8v-2.2zm0 6.2h1.8v.5h-1.8v-.5zm-4.9-7.3 5-5v5.1H13V8.2l5 4.9 1.3-1.3-7.3-7-7.1 7.1 1.3 1.3zM21 3H3v1.8h18V3z">
              </path>
            </svg>
          </div>
          <div class="_scrollToTopButtonLabel_gchs5_70 ">
            Til toppen
          </div>
        </button>
      </div>
    </main>
  </div>
</div>
`;

exports[`Tester/ScrollToTopButton WithAttributes play-test 1`] = `
<div data-test-block="true">
  <div class="height100vh">
    <main class="scrollToTopContainer"
          tabindex="-1"
    >
      <div class="_layout_179rg_1 ">
        <style>
          div.css-1gh4yjl { max-width: none}
        </style>
        <p>
          <strong>
            Responsive container
          </strong>
        </p>
        <article class="_article_179rg_12">
          <p>
            <strong>
              Responsive article
            </strong>
          </p>
          <p>
            (uses --semantic-responsive-article)
          </p>
        </article>
        <p>
          (uses --semantic-responsive-container)
        </p>
      </div>
      <div class="_container_gchs5_1 dummyClassname ">
        <button id="htmlId"
                class="_scrollToTopButton_gchs5_6 _scrollToTopButton_visible_gchs5_27 "
                lang="nb"
                type="button"
                data-testid="123ID"
        >
          <div class="_scrollToTopButtonIconContainer_gchs5_48 ">
            <svg class="_systemIcon_6zbcy_2 _systemIcon_large_6zbcy_13 _scrollToTopButtonIconContainerIcon_gchs5_56 "
                 viewbox="0 0 24 24"
                 focusable="false"
                 aria-hidden="true"
                 role="img"
            >
              <path d="M11.1 17.6h1.8v1.1h-1.8v-1.1zm0-3.3h1.8v2.2h-1.8v-2.2zm0 6.2h1.8v.5h-1.8v-.5zm-4.9-7.3 5-5v5.1H13V8.2l5 4.9 1.3-1.3-7.3-7-7.1 7.1 1.3 1.3zM21 3H3v1.8h18V3z">
              </path>
            </svg>
          </div>
          <div class="_scrollToTopButtonLabel_gchs5_70 ">
            Til toppen
          </div>
        </button>
      </div>
    </main>
  </div>
</div>
`;

exports[`Tester/ScrollToTopButton WithChildren play-test 1`] = `
<div data-test-block="true">
  <div class="height100vh">
    <main class="scrollToTopContainer"
          tabindex="-1"
    >
      <div class="_layout_179rg_1 ">
        <style>
          div.css-1gh4yjl { max-width: none}
        </style>
        <p>
          <strong>
            Responsive container
          </strong>
        </p>
        <article class="_article_179rg_12">
          <p>
            <strong>
              Responsive article
            </strong>
          </p>
          <p>
            (uses --semantic-responsive-article)
          </p>
        </article>
        <p>
          (uses --semantic-responsive-container)
        </p>
      </div>
      <div class="_container_gchs5_1  ">
        <button class="_scrollToTopButton_gchs5_6 _scrollToTopButton_visible_gchs5_27 "
                type="button"
        >
          <div class="_scrollToTopButtonIconContainer_gchs5_48 ">
            <svg class="_systemIcon_6zbcy_2 _systemIcon_large_6zbcy_13 _scrollToTopButtonIconContainerIcon_gchs5_56 "
                 viewbox="0 0 24 24"
                 focusable="false"
                 aria-hidden="true"
                 role="img"
            >
              <path d="M11.1 17.6h1.8v1.1h-1.8v-1.1zm0-3.3h1.8v2.2h-1.8v-2.2zm0 6.2h1.8v.5h-1.8v-.5zm-4.9-7.3 5-5v5.1H13V8.2l5 4.9 1.3-1.3-7.3-7-7.1 7.1 1.3 1.3zM21 3H3v1.8h18V3z">
              </path>
            </svg>
          </div>
          <div class="_scrollToTopButtonLabel_gchs5_70 ">
            dummy string
          </div>
        </button>
      </div>
    </main>
  </div>
</div>
`;

exports[`Tester/ScrollToTopButton WithCustomClassNames play-test 1`] = `
<div data-test-block="true">
  <div class="height100vh">
    <main class="scrollToTopContainer"
          tabindex="-1"
    >
      <div class="_layout_179rg_1 ">
        <style>
          div.css-1gh4yjl { max-width: none}
        </style>
        <p>
          <strong>
            Responsive container
          </strong>
        </p>
        <article class="_article_179rg_12">
          <p>
            <strong>
              Responsive article
            </strong>
          </p>
          <p>
            (uses --semantic-responsive-article)
          </p>
        </article>
        <p>
          (uses --semantic-responsive-container)
        </p>
      </div>
      <div class="_container_gchs5_1  dummyClassname">
        <button class="_scrollToTopButton_gchs5_6 _scrollToTopButton_visible_gchs5_27 dummyClassname"
                type="button"
        >
          <div class="_scrollToTopButtonIconContainer_gchs5_48 dummyClassname">
            <svg class="_systemIcon_6zbcy_2 _systemIcon_large_6zbcy_13 _scrollToTopButtonIconContainerIcon_gchs5_56 dummyClassname"
                 viewbox="0 0 24 24"
                 focusable="false"
                 aria-hidden="true"
                 role="img"
            >
              <path d="M11.1 17.6h1.8v1.1h-1.8v-1.1zm0-3.3h1.8v2.2h-1.8v-2.2zm0 6.2h1.8v.5h-1.8v-.5zm-4.9-7.3 5-5v5.1H13V8.2l5 4.9 1.3-1.3-7.3-7-7.1 7.1 1.3 1.3zM21 3H3v1.8h18V3z">
              </path>
            </svg>
          </div>
          <div class="_scrollToTopButtonLabel_gchs5_70 dummyClassname">
            Til toppen
          </div>
        </button>
      </div>
    </main>
  </div>
</div>
`;

exports[`Tester/ScrollToTopButton WithMobileScreen smoke-test 1`] = `
<div data-test-block="true">
  <div class="height100vh">
    <main class="scrollToTopContainer"
          tabindex="-1"
    >
      <div class="_layout_179rg_1 ">
        <style>
          div.css-1gh4yjl { max-width: none}
        </style>
        <p>
          <strong>
            Responsive container
          </strong>
        </p>
        <article class="_article_179rg_12">
          <p>
            <strong>
              Responsive article
            </strong>
          </p>
          <p>
            (uses --semantic-responsive-article)
          </p>
        </article>
        <p>
          (uses --semantic-responsive-container)
        </p>
      </div>
      <div class="_container_gchs5_1  ">
        <button class="_scrollToTopButton_gchs5_6 _scrollToTopButton_visible_gchs5_27 "
                type="button"
        >
          <div class="_scrollToTopButtonIconContainer_gchs5_48 ">
            <svg class="_systemIcon_6zbcy_2 _systemIcon_large_6zbcy_13 _scrollToTopButtonIconContainerIcon_gchs5_56 "
                 viewbox="0 0 24 24"
                 focusable="false"
                 aria-hidden="true"
                 role="img"
            >
              <path d="M11.1 17.6h1.8v1.1h-1.8v-1.1zm0-3.3h1.8v2.2h-1.8v-2.2zm0 6.2h1.8v.5h-1.8v-.5zm-4.9-7.3 5-5v5.1H13V8.2l5 4.9 1.3-1.3-7.3-7-7.1 7.1 1.3 1.3zM21 3H3v1.8h18V3z">
              </path>
            </svg>
          </div>
          <div class="_scrollToTopButtonLabel_gchs5_70 ">
            Til toppen
          </div>
        </button>
      </div>
    </main>
  </div>
</div>
`;

exports[`Tester/ScrollToTopButton WithNotScrollToMain play-test 1`] = `
<div data-test-block="true">
  <div class="height200vh">
    <div class="scrollToTopMainPusher">
      Mainpusher
    </div>
    <main class="scrollToTopContainer"
          tabindex="-1"
    >
      <div class="_layout_179rg_1 ">
        <style>
          div.css-1gh4yjl { max-width: none}
        </style>
        <p>
          <strong>
            Responsive container
          </strong>
        </p>
        <article class="_article_179rg_12">
          <p>
            <strong>
              Responsive article
            </strong>
          </p>
          <p>
            (uses --semantic-responsive-article)
          </p>
        </article>
        <p>
          (uses --semantic-responsive-container)
        </p>
      </div>
      <div class="_container_gchs5_1  ">
        <button class="_scrollToTopButton_gchs5_6 _scrollToTopButton_visible_gchs5_27 "
                type="button"
        >
          <div class="_scrollToTopButtonIconContainer_gchs5_48 ">
            <svg class="_systemIcon_6zbcy_2 _systemIcon_large_6zbcy_13 _scrollToTopButtonIconContainerIcon_gchs5_56 "
                 viewbox="0 0 24 24"
                 focusable="false"
                 aria-hidden="true"
                 role="img"
            >
              <path d="M11.1 17.6h1.8v1.1h-1.8v-1.1zm0-3.3h1.8v2.2h-1.8v-2.2zm0 6.2h1.8v.5h-1.8v-.5zm-4.9-7.3 5-5v5.1H13V8.2l5 4.9 1.3-1.3-7.3-7-7.1 7.1 1.3 1.3zM21 3H3v1.8h18V3z">
              </path>
            </svg>
          </div>
          <div class="_scrollToTopButtonLabel_gchs5_70 ">
            Til toppen
          </div>
        </button>
      </div>
    </main>
  </div>
</div>
`;

exports[`Tester/ScrollToTopButton WithRef play-test 1`] = `
<div data-test-block="true">
  <div class="height100vh">
    <main class="scrollToTopContainer"
          tabindex="-1"
    >
      <div class="_layout_179rg_1 ">
        <style>
          div.css-1gh4yjl { max-width: none}
        </style>
        <p>
          <strong>
            Responsive container
          </strong>
        </p>
        <article class="_article_179rg_12">
          <p>
            <strong>
              Responsive article
            </strong>
          </p>
          <p>
            (uses --semantic-responsive-article)
          </p>
        </article>
        <p>
          (uses --semantic-responsive-container)
        </p>
      </div>
      <div class="_container_gchs5_1  ">
        <button class="_scrollToTopButton_gchs5_6 _scrollToTopButton_visible_gchs5_27 "
                type="button"
                id="dummyIdForwardedFromRef"
        >
          <div class="_scrollToTopButtonIconContainer_gchs5_48 ">
            <svg class="_systemIcon_6zbcy_2 _systemIcon_large_6zbcy_13 _scrollToTopButtonIconContainerIcon_gchs5_56 "
                 viewbox="0 0 24 24"
                 focusable="false"
                 aria-hidden="true"
                 role="img"
            >
              <path d="M11.1 17.6h1.8v1.1h-1.8v-1.1zm0-3.3h1.8v2.2h-1.8v-2.2zm0 6.2h1.8v.5h-1.8v-.5zm-4.9-7.3 5-5v5.1H13V8.2l5 4.9 1.3-1.3-7.3-7-7.1 7.1 1.3 1.3zM21 3H3v1.8h18V3z">
              </path>
            </svg>
          </div>
          <div class="_scrollToTopButtonLabel_gchs5_70 ">
            Til toppen
          </div>
        </button>
      </div>
    </main>
  </div>
</div>
`;

exports[`Tester/ScrollToTopButton WithShadowDom play-test 1`] = `
<div data-test-block="true">
  <scrolltotop-customelement>
  </scrolltotop-customelement>
</div>
`;

exports[`Tester/ScrollToTopButton WithVisibilityThreshold smoke-test 1`] = `
<div data-test-block="true">
  <div class="height100vh">
    <main class="scrollToTopContainer"
          tabindex="-1"
    >
      <div class="_layout_179rg_1 ">
        <style>
          div.css-1gh4yjl { max-width: none}
        </style>
        <p>
          <strong>
            Responsive container
          </strong>
        </p>
        <article class="_article_179rg_12">
          <p>
            <strong>
              Responsive article
            </strong>
          </p>
          <p>
            (uses --semantic-responsive-article)
          </p>
        </article>
        <p>
          (uses --semantic-responsive-container)
        </p>
      </div>
      <div class="_container_gchs5_1  ">
        <button class="_scrollToTopButton_gchs5_6  "
                type="button"
        >
          <div class="_scrollToTopButtonIconContainer_gchs5_48 ">
            <svg class="_systemIcon_6zbcy_2 _systemIcon_large_6zbcy_13 _scrollToTopButtonIconContainerIcon_gchs5_56 "
                 viewbox="0 0 24 24"
                 focusable="false"
                 aria-hidden="true"
                 role="img"
            >
              <path d="M11.1 17.6h1.8v1.1h-1.8v-1.1zm0-3.3h1.8v2.2h-1.8v-2.2zm0 6.2h1.8v.5h-1.8v-.5zm-4.9-7.3 5-5v5.1H13V8.2l5 4.9 1.3-1.3-7.3-7-7.1 7.1 1.3 1.3zM21 3H3v1.8h18V3z">
              </path>
            </svg>
          </div>
          <div class="_scrollToTopButtonLabel_gchs5_70 ">
            Til toppen
          </div>
        </button>
      </div>
    </main>
  </div>
</div>
`;

exports[`Tester/ScrollToTopButton WithWideScreen smoke-test 1`] = `
<div data-test-block="true">
  <div class="height100vh">
    <main class="scrollToTopContainer"
          tabindex="-1"
    >
      <div class="_layout_179rg_1 ">
        <style>
          div.css-1gh4yjl { max-width: none}
        </style>
        <p>
          <strong>
            Responsive container
          </strong>
        </p>
        <article class="_article_179rg_12">
          <p>
            <strong>
              Responsive article
            </strong>
          </p>
          <p>
            (uses --semantic-responsive-article)
          </p>
        </article>
        <p>
          (uses --semantic-responsive-container)
        </p>
      </div>
      <div class="_container_gchs5_1  ">
        <button class="_scrollToTopButton_gchs5_6 _scrollToTopButton_visible_gchs5_27 "
                type="button"
        >
          <div class="_scrollToTopButtonIconContainer_gchs5_48 ">
            <svg class="_systemIcon_6zbcy_2 _systemIcon_large_6zbcy_13 _scrollToTopButtonIconContainerIcon_gchs5_56 "
                 viewbox="0 0 24 24"
                 focusable="false"
                 aria-hidden="true"
                 role="img"
            >
              <path d="M11.1 17.6h1.8v1.1h-1.8v-1.1zm0-3.3h1.8v2.2h-1.8v-2.2zm0 6.2h1.8v.5h-1.8v-.5zm-4.9-7.3 5-5v5.1H13V8.2l5 4.9 1.3-1.3-7.3-7-7.1 7.1 1.3 1.3zM21 3H3v1.8h18V3z">
              </path>
            </svg>
          </div>
          <div class="_scrollToTopButtonLabel_gchs5_70 ">
            Til toppen
          </div>
        </button>
      </div>
    </main>
  </div>
</div>
`;
